# fast-api-model-serving

./: Dockerfile  README.md  pyproject.toml
