[project]
name = "fastapi-tfserve"
version = "1.0"
description = "FastAPI for serving Tensorflow Models"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi>=0.115.6,<1.0",
    "uvicorn>=0.34.0,<1.0",
    "httpx>=0.28.1,<1.0",
    "pillow>=11.0.0,<12.0",
    "h5py>=3.12.1,<4.0",
    "tensorflow-cpu>=2.16.1,<3.0;     sys_platform == 'linux' and platform_machine == 'x86_64'",
    "tensorflow-aarch64>=2.16.1,<3.0; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "tensorflow-macos>=2.16.2,<3.0;   sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0",
    "ruff>=0.8.4",
    "jupyterlab>=4.3.4",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
